--- a/src/App.css
+++ b/src/App.css
@@ -18,3 +18,11 @@ body {
   margin: 0;
   background-color: #393e40;
 }
+
+/* Адаптация для мобильных устройств */
+@media only screen and (max-width: 600px) {
+  #root {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+}
