--- a/src/styles/HowWeWork.css
+++ b/src/styles/HowWeWork.css
@@ -158,7 +158,7 @@
     left: 10px;
   }
   .steps {
-    margin-left: 40px;
+    padding-left: 10px;
   }
 }
 
@@ -301,7 +301,9 @@
   .how-we-work {
     padding: 20px;
   }
-  
+  .steps {
+    margin-left: 20px;
+  }
   /* Заголовки и описание */
   .hww-title {
     font-size: 24px;
