--- a/src/styles/CalculatedCar.css
+++ b/src/styles/CalculatedCar.css
@@ -165,6 +165,7 @@
     /* Корректируем ширину полей ввода */
     .calc-input {
         width: 100%;
+        height: 20px;
     }
     
     /* Делаем кнопку растянутой на всю ширину и немного уменьшаем размер шрифта */
