--- a/src/styles/CalculatedCar.css
+++ b/src/styles/CalculatedCar.css
@@ -157,6 +157,10 @@
   /* Дополнительная адаптация для мобильных устройств (не трогая стили на ПК) */
 @media (max-width: 600px) {
     /* Уменьшаем внутренние отступы секции калькулятора */
+    .calc-label {
+        padding-top: 5px;
+        width: 295px;
+    }
     .calc-section {
         padding-left: 20px;
         padding-right: 20px;
@@ -165,13 +169,16 @@
     /* Корректируем ширину полей ввода */
     .calc-input {
         width: 100%;
-        height: 15px;
+        height: 15px; /* Оптимальная высота для удобного ввода */
+        font-size: 14px; /* Уменьшенный размер шрифта */
+        padding: 8px; /* Добавлен padding для удобства */
     }
     
     /* Делаем кнопку растянутой на всю ширину и немного уменьшаем размер шрифта */
     .calc-button {
         width: 100%;
         font-size: 14px;
+        padding: 12px; /* Оптимизированная высота кнопки */
     }
     
     /* Корректируем изображение, чтобы оно не выходило за пределы экрана */
