--- a/src/styles/CalculatedCar.css
+++ b/src/styles/CalculatedCar.css
@@ -3,7 +3,7 @@
     /* padding-left: 200px;
     padding-right: 200px; */
     opacity: 0; /* Начальное состояние – невидимо */
-    margin: 100px
+    margin: 100px;
   }
 /* Верхняя часть */
 .calc-header {
@@ -163,8 +163,7 @@
         width: 295px;
     }
     .calc-section {
-        padding-left: 20px;
-        padding-right: 20px;
+        margin: 30px;
     }
     
     /* Корректируем ширину полей ввода */
