--- a/src/styles/CalculatedCar.css
+++ b/src/styles/CalculatedCar.css
@@ -64,6 +64,7 @@
     border: none;
     font-size: 16px;
     box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.2); /* Внутренняя тень */
+    background-color: #fff;
     transition: box-shadow 0.3s ease; /* Анимация тени */
 }
 
@@ -161,6 +162,7 @@
     .calc-label {
         padding-top: 5px;
         width: 295px;
+        
     }
     .calc-section {
         margin: 30px;
