--- a/src/styles/SlidingModal.css
+++ b/src/styles/SlidingModal.css
@@ -60,6 +60,7 @@ input, textarea {
   width: 97%;
   padding: 12px;
   border: 1px solid #ddd;
+  background-color: #fff;
   border-radius: 8px;
   font-size: 14px;
   transition: border-color 0.2s ease;
