--- a/src/styles/CalculatedCar.css
+++ b/src/styles/CalculatedCar.css
@@ -65,6 +65,7 @@
     font-size: 16px;
     box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.2); /* Внутренняя тень */
     background-color: #fff;
+    color:black;
     transition: box-shadow 0.3s ease; /* Анимация тени */
 }
 
