--- a/src/styles/SlidingModal.css
+++ b/src/styles/SlidingModal.css
@@ -61,6 +61,7 @@ input, textarea {
   padding: 12px;
   border: 1px solid #ddd;
   background-color: #fff;
+  color:black;
   border-radius: 8px;
   font-size: 14px;
   transition: border-color 0.2s ease;
